브런치 실험중

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>브런치실험중</title>
 </head>
 <body>
   <div>박성현</div>
